--- a/Potatso/Potatso.entitlements
+++ b/Potatso/Potatso.entitlements
@@ -20,7 +20,7 @@
 	</array>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.io.wasin.potatso</string>
+		<string>group.pub.odin.potatso</string>
 	</array>
 	<key>keychain-access-groups</key>
 	<array>
